--- a/src/estilos/menuSuperior.css
+++ b/src/estilos/menuSuperior.css
@@ -10,10 +10,17 @@ body {
     padding: 20px;
     color: white;
     height: 80px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 1000;
 }
 .profile-img {
     width: 60px;
-    height: 60px;
+    height: 60px;   
     border-radius: 50%;
     margin-right: 20px;
     background-image: url('../assets/judy.jpg');
@@ -62,4 +69,9 @@ body {
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     font-weight: bold;
+}
+
+/* Añade un espaciado al contenido principal para compensar el navbar fijo */
+.App-header {
+    margin-top: 120px;
 }
