muchas cosas, entre ellas arreglar el login y hacer que se pueda usar el usuario logeado para muchas cosas. FALTA lo de subir de nivel el usuario cuando sea necesario

--- a/src/estilos/menuSuperior.css
+++ b/src/estilos/menuSuperior.css
@@ -23,7 +23,7 @@ body {
     height: 60px;   
     border-radius: 50%;
     margin-right: 20px;
-    background-image: url('../assets/judy.jpg');
+    background-image: url('../assets/judy.webp');
     background-size: cover;
     background-position: center;
 }
